--- a/supermarket_sales.ipynb
+++ b/supermarket_sales.ipynb
@@ -664,8 +664,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Notebook is available on (GitHub)[] and (Kaggle)[]. Blog post is available on (Medium)[]."
+    "Notebook is available on [GitHub](https://github.com/alghsaleh/Customer-Behavior-to-Drive-Sales/blob/master/supermarket_sales.ipynb) and [Kaggle](https://www.kaggle.com/alghsaleh/customer-behavior-to-drive-sales). Blog post is available on [Medium](https://medium.com/@alghsaleh/customer-behavior-to-drive-sales-aaeeefb0b39e?source=friends_link&sk=2d1735c7229a5a0341547ffc1189fda7)."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
